--- a/index.html
+++ b/index.html
@@ -30,68 +30,22 @@
   <table border="1">
     <thead>
       <tr>
-        <th colspan="4">Regional Sales Q1</th>
+        <th colspan="3">Faves/th>
       </tr>
       <tr>
-        <th>Region</th>
-        <th>Sales Person</th>
-        <th>Amount</th>
-        <th>Total</th>
+        <th>Books</th>
+        <th>Movies</th>
+        <th>Songs</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>North-West</td>
-        <td>Tim</td>
-        <td>$3,000</td>
-        <td>$24,700</td>
+        <td>Tim Winton - Breath</td>
+        <td>Interstellar</td>
+        <td>The Hu - Wolf Totem</td>
       </tr>
-      <tr>
-        <td>South-East</td>
-        <td>Ashley</td>
-        <td>$1,500</td>
-      </tr>
-      <tr>
-        <td>South-West</td>
-        <td>Jeff</td>
-        <td>$1,000</td>
-      </tr>
-      <tr>
-        <td>North-West</td>
-        <td>Sarah</td>
-        <td>$4,000</td>
-      </tr>
-      <tr>
-        <td>North-East</td>
-        <td>Alex</td>
-        <td>$2,000</td>
-      </tr>
-      <tr>
-        <td>North-East</td>
-        <td>Kevin</td>
-        <td>$5,000</td>
-      </tr>
-      <tr>
-        <td>South-East</td>
-        <td>Patricia</td>
-        <td>$6,300</td>
-      </tr>
-      <tr>
-        <td>South-West</td>
-        <td>Arnold</td>
-        <td>$200</td>
-      </tr>
-      <tr>
-        <td>North-West</td>
-        <td>Lindsay</td>
-        <td>$800</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="4">Q1 Employee Sales By Region</td>
-      </tr>
-    </tfoot>
+          </tbody>
+
   </table>
 
     <br>
